# python-mpv-gtk4

./: Justfile  README.md  Readme.md  main.py  pyproject.toml  requirements.txt
